bullet gap fix

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -195,7 +195,7 @@ p {
   transform: translateX(-50%);
   display: flex;
   justify-content: center;
-  gap: 30px;
+  gap: 20px;
 }
 .scrollToTop {
   &-btn {
@@ -286,6 +286,9 @@ p {
       bottom: 50px;
       right: 50px;
     }
+  }
+  .swiper-pagination {
+    gap: 30px;
   }
 }
 @media screen and (min-width: 990px) {
